# webdriver-recorder

./: .gitignore  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  Readme.md  bootstrap_chromedriver.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  report.template.html  requirements.txt  setup.py  test_webdriver_recorder.py  tox.ini  validate-strict.sh  webdriver-architecture.puml  webdriver_recorder.py
.github/workflows/: build-and-validate.yml  release.yml
docs/: migrating-to-5.0.md
examples/: conftest.py  test_examples.py  test_selenium.py
sandbox/: index.html
templates/: collapsible_card.html  report.html  test_result.html
tests/: conftest.py  test_browser.py  test_models.py  test_plugin.py
tests/data/: index.html
webdriver_recorder/: VERSION  browser.py  export-report.py  models.py  plugin.py  report.template.html  report_exporter.py  test_webdriver_recorder.py
webdriver_recorder/templates/: help.html  modal.html  modal_link.html  report.html  report_header.html  report_summary.html  test_case.html  test_result.html  test_screenshots.html  toast-copied-to-clipboard.html
webdriver_recorder/templates/static/: report.js  style.css
